# OPENMPNGINE

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
For/src/: Main.cpp
Parallel/: CMakeLists.txt
Parallel/src/: Main.cpp
Section/: CMakeLists.txt
Section/src/: Main.cpp
Single/: main.cpp
Single/src/: Main.cpp
